--- a/Check COVID-19 Vaccination.ipynb
+++ b/Check COVID-19 Vaccination.ipynb
@@ -14,7 +14,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last run:  2020-12-25 03:44:48.061022\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "start_time  = datetime.now()\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +180,7 @@
        "[10 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +241,7 @@
        "Name: total_vaccinations, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,8 +319,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-12-25 03:32:23.923243\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:03.557435\n"
+      "Ended:  2020-12-25 03:44:51.314372\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:03.253589\n"
      ]
     }
    ],
